<resources>
    <string name="app_name">myTetris</string>
    <string name="tetrisTag">TETRIS</string>
    <string name="high_score">High score:</string>
    <string name="btn_text_new_game">New game</string>
    <string name="btn_text_reset_score">Reset score</string>
    <string name="bnt_text_exit">Exit</string>
    <string name="current_score_game">Current score:</string>
    <string name="btn_text_restart">RESTART</string>
</resources>