<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayoutMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:layout_marginBottom="@dimen/layout_margin_bottom"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvGameTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tetrisTag"
            android:textSize="80sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_top"
            android:text="@string/high_score"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/linearLayoutMainButtons"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnNewGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_text_new_game" />

            <Button
                android:id="@+id/btnResetScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_text_reset_score" />

            <Button
                android:id="@+id/bntExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bnt_text_exit" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>