<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="10"
        android:background="@android:color/darker_gray">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingTop="32dp"
            android:paddingBottom="32dp"
            android:layout_weight="3">
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tvCurrentScoreGame"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/current_score_game"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvCurrentScoreValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="2dp"
                        android:text="0"
                        android:textSize="16sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin_top"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tvHighScoreGame"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/high_score"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvHighScoreValueGame"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="2dp"
                        android:text=""
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>
            
            <Button
                android:id="@+id/btnRestart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_text_restart" />


        </LinearLayout>
        
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#000" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7" >

            <com.example.mytetris.view.TetrisView
                android:id="@+id/tetris_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>